--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header > p{
     font-size: 1.2em;
     max-width: 600px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
     padding-left: 10px;
     padding-right: 10px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.274);
@@ -138,7 +138,7 @@ aside {
     padding: 10px;
 }
 aside > ul {
-    list-style-type: '\⚓\00A0\00A0';
+    list-style-type: '\⚓\00A0';
     list-style-position: inside;
     columns: 2;
 }
